--- a/.github/workflows/artifact.yml
+++ b/.github/workflows/artifact.yml
@@ -10,7 +10,9 @@ jobs:
            uses: actions/checkout@v2
            
          - name: create a file
-           run: mkdir folder && touch folder/xyz
+           run: mkdir folder && touch folder/xyz && touch folder/abc
+           
+           
            
          - name: view files
            run: ls -al 
@@ -19,6 +21,6 @@ jobs:
            uses: actions/upload-artifact@v2
            with:
             name: ${{env.ARTIFACT_NAME}}
-            path: .
+            path: folder
             
             
